--- a/daily/8/DeepLearning/myproject/yolo3/Untitled.ipynb
+++ b/daily/8/DeepLearning/myproject/yolo3/Untitled.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -32,7 +34,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "boxes=get_boxes('data/train.txt')\n",
@@ -42,7 +46,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -77,7 +83,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def anchorBox2Img(anchorbox,baseUnit=50):\n",
@@ -104,7 +112,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -147,7 +157,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "GRID_SIZE,IMG_SIZE,C=13,416,2"
@@ -156,7 +168,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "anchor_boxes=load_anchor_boxes('data/raccoon_my_anchors.txt',IMG_SIZE,IMG_SIZE)\n",
@@ -166,7 +180,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def get_label_boxes(I,y):\n",
@@ -260,7 +276,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -278,7 +296,9 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -336,7 +356,9 @@
   {
    "cell_type": "code",
    "execution_count": 197,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "np.random.seed(0)\n",
@@ -353,7 +375,9 @@
   {
    "cell_type": "code",
    "execution_count": 206,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def mAp(recall,precision):\n",
@@ -368,7 +392,9 @@
   {
    "cell_type": "code",
    "execution_count": 207,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "score,r,p=mAp(recall,precision)"
@@ -377,7 +403,9 @@
   {
    "cell_type": "code",
    "execution_count": 209,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -401,6 +429,94 @@
     "plt.plot(r,p)\n",
     "print(score)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#native amap"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# np.random.seed(0)\n",
+    "N=100\n",
+    "p=0.8\n",
+    "\n",
+    "predict=np.random.rand(N)\n",
+    "predict=predict<p\n",
+    "\n",
+    "GT_NUM=np.sum(predict)\n",
+    "predict=np.concatenate((predict,[False,False,False,False]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def nativePrecisionAndRecall(predict,gt):\n",
+    "    precision,recall=[],[]\n",
+    "    TP=0\n",
+    "    \n",
+    "    for i,r in enumerate(predict):\n",
+    "        if r:\n",
+    "            TP+=1\n",
+    "            precision.append(TP/(i+1))\n",
+    "            recall.append(TP/(gt))\n",
+    "    ap=0\n",
+    "    for i in range(len(precision)):\n",
+    "        ap+=precision[i]/gt\n",
+    "    return precision,recall,ap"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9040790507749799\n",
+      "0.85\n"
+     ]
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXwAAAD8CAYAAAB0IB+mAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAHMJJREFUeJzt3Xt03HWd//HnO5nMJJncL70lvVFaeuNSGroIq+CCUDjY\nKrpuq8jqjx89uj88rrKudfWgi57j8bLrD3dhoa6sP1REdNGtUmVFily0XYItLW1tCb0kbZM2aZrJ\ndZJM8vn9MdMmpJdMk5nMZL6vxzlzZr4zn8y8+2nymu/38/18v19zziEiIpkvK9UFiIjIxFDgi4h4\nhAJfRMQjFPgiIh6hwBcR8QgFvoiIR4wa+Gb2qJkdN7PXz/G6mdm3zazOzHaY2ZWJL1NERMYrnjX8\n7wErz/P6LcD82G0d8G/jL0tERBJt1MB3zr0AtJ6nyWrgMRe1BSgxs+mJKlBERBLDl4D3qAIahi0f\njj3XOLKhma0juhVAMBhcvnDhwgR8vIiId7z66qstzrnKsfxsIgI/bs65DcAGgJqaGldbWzuRHy8i\nMumZ2aGx/mwiZukcAWYOW66OPSciImkkEYG/EbgzNlvnaiDknDtjOEdERFJr1CEdM/sRcD1QYWaH\ngS8COQDOuYeBTcCtQB3QDXw0WcWKiMjYjRr4zrm1o7zugP+TsIpERCQpdKStiIhHKPBFRDxiQqdl\nikx2zjm6+wbo7I3Q1Ruhq3eArr7Y474BuofdV5fl8Z4rqjCzVJctAijwxUPC/QO0h/vpCEdo74nd\nx5Y7wv10hiO0hyN09saWeyN0xpa7emMh3xfhQq4Kuu9YJ39/8yUKfUkLCnyZVAYGHe09/Zzs7uNk\ndz+hnj7auvujt55+Qt19hHr633JrD0cI9fTTFxk873ubQUHAR2HAR0Guj4KAj+J8P9Wl+RQEfAQD\nPgoC2QRPP47eB/2nnove5/t95OVkc/8vd/Fvz7/JoHOsX7kw6aHvnKM3MviWrY/uvugXVmTAce3F\nFeT5s5Nag6Q3BX4KdYT72Xesg6lFuVSX5qe6nJSIDAzS2tVHc2cvJzr7ONEVvW/tGnHr7uNkVx9t\nPf3nXMM2g8KAj+L8HEry/BTn5TC9OI+iPB9FeTkU5ebE7n0U5eZQmOuj8PS9j6DfR1ZW4kL5y6uX\nAvDI7/aDg/W3nD30BwcdXX2xrYvY1kZHOELH6S2MU1shkdNhHt0KGXrc2Ruhu2+AgcFzb34snFbI\nd+6sYWaZN3/XRIE/YZo7etl5pI0dh0PsOtrOn5raaWjtAWB2eT6b770+oWGTat19EZpCYY6193K8\nI8zx2H1zRy/Nnb00d/TSEgv2s/FlGaVBP+VBP2VBP4umF1Gan0NZvp+SfD+lwZzofb6fkrwcSvJz\nKMzNITuN+tDM+PLqpWSZ8cgL+9nd2E5uTjbtsa2O6H106Gi0YaKRWx/BQPRLanpx7rCtjeyhx37f\n6a2OfL+PplCYzz21g1X/+hIPfWg5b5tXPjGdIGlFgZ8E/QOD7DraTu3BVv5Yf5Jt9W00hsJA9A/3\nooogl1eXsOaqWXT3RXhw85u8WNfCdQvGdD6kCdfTN8CRth6OnrqFwjSFemgMhWkMhTkWCtPRGznj\n5wK+LCoLA0wpDDC3IsiKuWWUBwNUFAaoCPqpKAxQFvRTEQxQlOfLiHFvM+MfVy0hGPDxi9eOUpgb\n3cKoLs2jcHrh6S2Ns21xnHpcEPCR788ed38snlHE3Y/Vcsd3t3LfbYu5822zM6KPJX7mLmQPVAJl\n0snTBgYdO4+EeLmuhd+/2cKrh04S7o+OF1eX5nHlrFIuqy7msuoSlswoIhgY+p7tjQxwzVefY/ns\nUjbcWZOqf8Jb9EUGOdLWQ31rN/Wt3Rxu7ebwyR4aTkbvR66Vm0FlQYDpJXlML8plWnEuU4oCTCvK\nZWpRLlMKA0wpyqUoNzNCfDLrCPfzqR9v59k9x7l9WRVfee9S8v1a75tMzOxV59yYwkL/02PU1t3H\n83ub+c2eY7y4r5n2cHSNduG0QtZcNYur5pRRM6eUqUW5532fgC+bv6yZyXde3E9jqIfpxXkTUT4D\ng46jbT3UNXdyoLmLgye6ONASvR1t62H4ULDfl0V1SR7VZfksmVFMdWkeVSV5zCjJY0ZJNNRzsnVI\nx2RQmJvDhg/X8C/P1fF/f7uP14+GeOhDy7l4SkGqS5MJoDX8C9Da1cfTO47y9M5GXjl4koFBR0VB\ngL9YWMm1F1dwzbwKKgsDF/y+9Se6ue6bm/nkDfP52xsXJLTmyMAgh1q7eeNYB/uOdbLvWAd1xzs5\n0NJF77BZK4W5PuZWBJlTHmROeT6zyoPMLs9nVlk+lQWBjNq/IFEvvtHM3z6xnZ7+Ae5fvZQFUwto\n647ObBp0jpVLpxHwaVZPuhnPGr4CfxTh/gGe2dXEz7cd4cU3WogMOuZPKeCmJVO5cdFULq8uSUgY\n/vWj/8Pepg5e+uw78Y1xbbmzN8KuIyF2N7azp7GdPY0d7DvW8ZZgn1mWx/wphcyrDDKvsoB5Uwq4\nqCJIWdCv4RYPagqFuefxP1J76OQZry2cVsgDa5ZxybTCFFQm56LAT4L6E938YOshnqxtoK27nxnF\nuay6oorVV8xg0fSihH/ef+9qYt33X+WRDy/n5iXTRm0f7h9g19F2tje0sfNwGzuOhDjQ0nV6tkd5\nbGbLoumFXDKtiAVTC7h4SoHGa+UM/QODPPen42Sbxaa05vBmcxdf+PlO2sMR1q9cyEeumXPGis3A\noCMUOyYiNyebqpKJGY70OgV+AtUebOWh599k897jZJlx85Kp3HH1bK6eW57UYY3IwCBv//pm5k8t\n5LH/teKM15s7ennlYCuvHGzlj/Vt7D4aon8g+n83rSiXpVXFXFZdzKVVxSyZUURlYUBr7DIuzR29\nfPY/d/Dcn46zbFYJxXk5nOzupy12TMSp/VYQ3XH/0Wvm8nc3L0joSsXAoKMj3H96qCnUEzvArqef\n9th9RzjC2+dXcMvSaZ74nVfgJ8Crh1r51m/e4KW6FsqDfj509Ww+uGIW04rPv9M1kR549g2+9ew+\nfveZ6ykI+Pj9myf4/ZstbN3fyv6WLiA6tfHy6hKWzS5h2cxSls0qGXXHsMhYOef44dZ6vvf7g+Tl\nZFOSn0Npvp/S/OhxEKeWaw+18oMt9cwsy+Or772MP59fccb7dPRGaOuKbhG0dvfFvjiiXyBtPdFQ\nPxk7Urot9sXSMcoxCgFfFn5fFh3hCFfNKeW+25ZwaXVxknsltRT447C3qYOvPL2bF9+IBv3HrpvH\nHVfPTskh6E2hMNd+7TlK8nI4EZv6WBjwsWJuGVfNLeOqOWVcWlWM36cZMZJ+tu4/wfqndnKgpYtr\n5pUzMOii4R4L9cg5jgI2g6LcHErzcyiOfZkU50W/SIryoo9PHVxXnDd0K8rLITcnm4FBx5O1DXzz\nmb20dvdx+7JqllYVnd4q6OqNcPOSadywaEpGbAEo8Meguy/CA8++wXdfOkBBro+/uT4a9Kke4/7a\nr//EjsNtXDOvgmvmlXNpVfGYd+KKTLRw/wAP/PYNnttznOL8aIiXBaNHR5fl+ykN+ikL5lCcFw32\nU6GeiCOk28P9PPhcHY++fOD0cGdhro/sLKOtu5+r5pSy/paFLJ9dNu7PSiUF/gX6711NfGnjLo6G\nwnygppr1tyyiLOhPSS0iklihnn4GBh1FuT582Vn0Dwzyk9rDfOvZfTR39PKuxVP5u5sumbSzjxT4\ncQr3D3D/L3fz+NZ6LplayFfeu5Sr5kzub3sRiU93X4T/ePkgDz//Jp19Ed592Qw+eeN85lVOroPO\nFPhxaGjt5uM/fJXXj7Tzsevmce9NC3R0qIgHnezqY8OL+/neywfpjQxw+5XVfPHdiynMzUl1aXHR\nqRVG8ezuY3z6ye0A/PudNdy4eGqKKxKRVCkN+vnsyoXc9edzefj5N3n05QPkZGfx1dsvTXVpSZfx\ngf/E/9TzuZ/tZMmMIh764HJmletc4CICFQUBvnDbYgD+/aUD3H5lVcYP8Wb0mMYPtx5i/VM7uW5B\nJT/92DUKexE5w6fetYCqkjw+99ROeiMDqS4nqTI28B/7w0E+/7PXuWHhFB758HJyc3QSKBE5UzDg\n4yvvWUrd8U4efn5/qstJqowc0vmPlw/wj7/YzbsWT+VfP7hMZ/wTkfN658Ip3HbZdB7cXMdtl08/\n78ydgUFHa9fQ5ThbRlyeM3olt15OdPXR2tlHfiCbv6qZyQf/bPaEHrl/Nhk3S+c3u49x92O13Lxk\nKv+y9kodlSoicTneEebGf/odC6YWsnbFLJo7e2np6KWlM3o5zpbYpTlbu/vOerqH7Cw7fUnOioIA\n5QXRx/Ununkudm6umxZP5cNvm83bLiof81G/mqUT09Dazb1PbmdpVREPrFmmsBeRuE0pzOUfbl3E\n+qd2nj5ddG5O9LKcFQUBZpbls2xWKRUF0UA/Feqnlotyc855gsWG1m5+sOUQP65t4FevN3FRRZC1\nK2bxvuXVpw/6dC569tGWzj5OdEa3EE50xR7Hrv98oqt3XP/GjFnD740M8JcP/4EDLV08/Ym3awet\niFww5xx7GjvI92dTURggmIBrCQ8X7h9g085GHt9aT+2hk/izs7ioMsjJ7j5OdJ77fEMlsVNUlAf9\n/PTj12oN/yu/3MOOwyEe+bCmXorI2JgZi2ck/noXp+TmZHP7ldXcfmU1e5s6eOKVehpau7m8uoTy\nAj/lBQHKhw0JlQej5x8afpCofXzsn58Rgb/xtaN8f8sh7n773LguHiIikmqXTCvki+9eMqGfOekH\nuVs6e/mHp3ayfHYpf79yYarLERFJW5M+8L/92zfo6R/g6++/TOfGERE5j0mdkAdaunh8az1rrpo5\n6c54JyIy0SZ14H/zmb34fVl88sb5qS5FRCTtTdrA397QxtM7G/nfb7+IKYW6pquIyGjiCnwzW2lm\ne82szszWn+X1WWa22cy2mdkOM7s18aUOcc7x1U17qCjws+4dFyXzo0REMsaogW9m2cCDwC3AYmCt\nmS0e0ewLwJPOuWXAGuChRBc63Oa9x9l6oJVP3jCfgkBGzCwVEUm6eNbwVwB1zrn9zrk+4Alg9Yg2\nDjh1tEIxcDRxJY74IOf4+q/3MrciyJoVs5L1MSIiGSeewK8CGoYtH449N9yXgDvM7DCwCfjE2d7I\nzNaZWa2Z1TY3N4+hXNhxOMSfmjpY946LNA1TROQCJCox1wLfc85VA7cC3zezM97bObfBOVfjnKup\nrKwc0wf9bNsR/L4sbr10+vgqFhHxmHgC/wgwc9hydey54e4CngRwzv0ByAUqElHgcP0Dg/zitaPc\nuGgKxXmT44LDIiLpIp7AfwWYb2ZzzcxPdKfsxhFt6oEbAMxsEdHAH9uYzXm8+EYzJ7r6eO+y6kS/\ntYhIxhs18J1zEeAe4BlgD9HZOLvM7H4zWxVrdi9wt5m9BvwI+IhLwnmXn/rjEUrzc7huwdiGg0RE\nvCyuOY3OuU1Ed8YOf+6+YY93A9cmtrS3ag/385vdx/irq2bqwiYiImMwaZLz16830RsZ5D3LRk4Q\nEhGReEyawP/ZH48wtyLIspklqS5FRGRSmhSBf7Sthy0HTvCeK6oSerkxEREvmRSB/1/bj+IcvFfD\nOSIiYzYpAv8Xrx1l+exSXatWRGQc0j7w28P97Glq11RMEZFxSvvA39EQwjlYNks7a0VExiPtA397\nw0kALqtW4IuIjEfaB/62+jYunlKgc+eIiIxTWge+c45tDW2aey8ikgBpHfgNrT20dvVxhcbvRUTG\nLa0Df1ts/H7ZzNIUVyIiMvmld+DXt5GXk82CqQWpLkVEZNJL78BvaOOy6mJ8upShiMi4pW2ShvsH\n2H00xLJZGs4REUmEtA38XUfb6R9wXKEZOiIiCZG2gb+9oQ3QEbYiIomStoG/rf4kVSV5TC3KTXUp\nIiIZIY0Dv03DOSIiCZSWgX+8I8yRth4N54iIJFBaBv72+uj4vdbwRUQSJy0Df1tDG74sY2lVcapL\nERHJGGkZ+Nvr21g0vYjcnOxUlyIikjHSMvDrW7u5eIpOpyAikkhpF/iDg45j7WGmFWs6pohIIqVd\n4Ld09RIZdExX4IuIJFTaBX5TKAzANB1wJSKSUGkX+I2xwJ9enJfiSkREMkvaBf6x9tgavoZ0REQS\nKu0CvzEUJifbKA/6U12KiEhGSbvAbwqFmVKYS1aWpboUEZGMknaB3xjq0QwdEZEkSLvAbwppDr6I\nSDKkVeA752hqD2sNX0QkCeIKfDNbaWZ7zazOzNafo80HzGy3me0ys8fHUkyop59w/6AueiIikgS+\n0RqYWTbwIPAu4DDwipltdM7tHtZmPvA54Frn3EkzmzKWYjQHX0QkeeJZw18B1Dnn9jvn+oAngNUj\n2twNPOicOwngnDs+lmJOH2WrIR0RkYSLJ/CrgIZhy4djzw23AFhgZi+b2RYzW3m2NzKzdWZWa2a1\nzc3NZ7w+tIavwBcRSbRE7bT1AfOB64G1wHfM7IzLVTnnNjjnapxzNZWVlWe8SVOohyyDysJAgsoS\nEZFT4gn8I8DMYcvVseeGOwxsdM71O+cOAPuIfgFckKb2MJWFAXKy02rykIhIRognWV8B5pvZXDPz\nA2uAjSPa/Jzo2j1mVkF0iGf/hRbTGArrLJkiIkkyauA75yLAPcAzwB7gSefcLjO738xWxZo9A5ww\ns93AZuAzzrkTF1qMDroSEUmeUadlAjjnNgGbRjx337DHDvh07DZmTaEw115cMZ63EBGRc0ibwfLO\n3ggdvRGt4YuIJEnaBH6TpmSKiCRV2gW+dtqKiCRH2gR+Y6gH0FG2IiLJkjaBf2oNXydOExFJjrQJ\n/Mb2MGVBP7k52akuRUQkI6VN4DfpoCsRkaRKq8DXDB0RkeRJn8Bv11G2IiLJlBaBH+4foLWrT0M6\nIiJJlBaBf6xdFz4REUm2tAh8XdpQRCT50iLwtYYvIpJ8aRH4jbqWrYhI0qVF4DeFwhQGfBQE4jpb\ns4iIjEFaBH5jqEdr9yIiSZYWgV+cl8PSquJUlyEiktHSYgzl6++/PNUliIhkvLRYwxcRkeRT4IuI\neIQCX0TEIxT4IiIeocAXEfEIBb6IiEco8EVEPEKBLyLiEQp8ERGPUOCLiHiEAl9ExCMU+CIiHqHA\nFxHxCAW+iIhHKPBFRDxCgS8i4hEKfBERj4gr8M1spZntNbM6M1t/nnbvMzNnZjWJK1FERBJh1MA3\ns2zgQeAWYDGw1swWn6VdIfBJYGuiixQRkfGLZw1/BVDnnNvvnOsDngBWn6Xdl4GvAeEE1iciIgkS\nT+BXAQ3Dlg/HnjvNzK4EZjrnnj7fG5nZOjOrNbPa5ubmCy5WRETGbtw7bc0sC/hn4N7R2jrnNjjn\napxzNZWVleP9aBERuQDxBP4RYOaw5erYc6cUAkuB583sIHA1sFE7bkVE0ks8gf8KMN/M5pqZH1gD\nbDz1onMu5JyrcM7Ncc7NAbYAq5xztUmpWERExmTUwHfORYB7gGeAPcCTzrldZna/ma1KdoEiIpIY\nvngaOec2AZtGPHffOdpeP/6yREQk0XSkrYiIRyjwRUQ8QoEvIuIRCnwREY9Q4IuIeIQCX0TEIxT4\nIiIeocAXEfEIBb6IiEco8EVEPEKBLyLiEQp8ERGPUOCLiHiEAl9ExCMU+CIiHqHAFxHxCAW+iIhH\nKPBFRDxCgS8i4hEKfBERj1Dgi4h4hAJfRMQjFPgiIh6hwBcR8QgFvoiIRyjwRUQ8QoEvIuIRCnwR\nEY9Q4IuIeIQCX0TEIxT4IiIeocAXEfEIBb6IiEco8EVEPCKuwDezlWa218zqzGz9WV7/tJntNrMd\nZvZbM5ud+FJFRGQ8Rg18M8sGHgRuARYDa81s8Yhm24Aa59xlwE+Brye6UBERGZ941vBXAHXOuf3O\nuT7gCWD18AbOuc3Oue7Y4hagOrFliojIeMUT+FVAw7Dlw7HnzuUu4Fdne8HM1plZrZnVNjc3x1+l\niIiMW0J32prZHUAN8I2zve6c2+Ccq3HO1VRWVibyo0VEZBS+ONocAWYOW66OPfcWZnYj8HngOudc\nb2LKExGRRIlnDf8VYL6ZzTUzP7AG2Di8gZktAx4BVjnnjie+TBERGa9RA985FwHuAZ4B9gBPOud2\nmdn9ZrYq1uwbQAHwEzPbbmYbz/F2IiKSIvEM6eCc2wRsGvHcfcMe35jgukREJMF0pK2IiEco8EVE\nPEKBLyLiEQp8ERGPUOCLiHiEAl9ExCMU+CIiHqHAFxHxCAW+iIhHKPBFRDxCgS8i4hEKfBERj1Dg\ni4h4hAJfRMQjFPgiIh6hwBcR8QgFvoiIRyjwRUQ8QoEvIuIRCnwREY9Q4IuIeIQCX0TEIxT4IiIe\nocAXEfEIBb6IiEco8EVEPEKBLyLiEQp8ERGPUOCLiHiEAl9ExCMU+CIiHqHAFxHxCAW+iIhHKPBF\nRDxCgS8i4hFxBb6ZrTSzvWZWZ2brz/J6wMx+HHt9q5nNSXShIiIyPqMGvpllAw8CtwCLgbVmtnhE\ns7uAk865i4FvAV9LdKEiIjI+8azhrwDqnHP7nXN9wBPA6hFtVgP/L/b4p8ANZmaJK1NERMbLF0eb\nKqBh2PJh4M/O1cY5FzGzEFAOtAxvZGbrgHWxxV4ze30sRWegCkb0lYepL4aoL4aoL4ZcMtYfjCfw\nE8Y5twHYAGBmtc65mon8/HSlvhiivhiivhiivhhiZrVj/dl4hnSOADOHLVfHnjtrGzPzAcXAibEW\nJSIiiRdP4L8CzDezuWbmB9YAG0e02Qj8dezx+4HnnHMucWWKiMh4jTqkExuTvwd4BsgGHnXO7TKz\n+4Fa59xG4LvA982sDmgl+qUwmg3jqDvTqC+GqC+GqC+GqC+GjLkvTCviIiLeoCNtRUQ8QoEvIuIR\nSQ98nZZhSBx98Wkz221mO8zst2Y2OxV1ToTR+mJYu/eZmTOzjJ2SF09fmNkHYr8bu8zs8YmucaLE\n8Tcyy8w2m9m22N/JramoM9nM7FEzO36uY5Us6tuxftphZlfG9cbOuaTdiO7kfRO4CPADrwGLR7T5\nG+Dh2OM1wI+TWVOqbnH2xTuB/Njjj3u5L2LtCoEXgC1ATarrTuHvxXxgG1AaW56S6rpT2BcbgI/H\nHi8GDqa67iT1xTuAK4HXz/H6rcCvAAOuBrbG877JXsPXaRmGjNoXzrnNzrnu2OIWosc8ZKJ4fi8A\nvkz0vEzhiSxugsXTF3cDDzrnTgI4545PcI0TJZ6+cEBR7HExcHQC65swzrkXiM54PJfVwGMuagtQ\nYmbTR3vfZAf+2U7LUHWuNs65CHDqtAyZJp6+GO4uot/gmWjUvohtos50zj09kYWlQDy/FwuABWb2\nspltMbOVE1bdxIqnL74E3GFmh4FNwCcmprS0c6F5AkzwqRUkPmZ2B1ADXJfqWlLBzLKAfwY+kuJS\n0oWP6LDO9US3+l4ws0udc20prSo11gLfc879k5m9jejxP0udc4OpLmwySPYavk7LMCSevsDMbgQ+\nD6xyzvVOUG0TbbS+KASWAs+b2UGiY5QbM3THbTy/F4eBjc65fufcAWAf0S+ATBNPX9wFPAngnPsD\nkEv0xGpeE1eejJTswNdpGYaM2hdmtgx4hGjYZ+o4LYzSF865kHOuwjk3xzk3h+j+jFXOuTGfNCqN\nxfM38nOia/eYWQXRIZ79E1nkBImnL+qBGwDMbBHRwG+e0CrTw0bgzthsnauBkHOucbQfSuqQjkve\naRkmnTj74htAAfCT2H7reufcqpQVnSRx9oUnxNkXzwA3mdluYAD4jHMu47aC4+yLe4HvmNmniO7A\n/UgmriCa2Y+IfslXxPZXfBHIAXDOPUx0/8WtQB3QDXw0rvfNwL4SEZGz0JG2IiIeocAXEfEIBb6I\niEco8EVEPEKBLyLiEQp8ERGPUOCLiHjE/wfGykWG8tjHRwAAAABJRU5ErkJggg==\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x7f25dbee7d30>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "p,r,ap=nativePrecisionAndRecall(predict,GT_NUM)\n",
+    "plt.plot(r,p)\n",
+    "plt.xlim(0,1)\n",
+    "plt.ylim(0,1)\n",
+    "print(ap)\n",
+    "print(p[-1])"
+   ]
   }
  ],
  "metadata": {
@@ -412,7 +528,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 3.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
@@ -423,5 +539,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 0
 }
