--- a/daily/8/DeepLearning/myproject/yolo3/Untitled.ipynb
+++ b/daily/8/DeepLearning/myproject/yolo3/Untitled.ipynb
@@ -39,6 +39,17 @@
    },
    "outputs": [],
    "source": [
+    "tf.matrix_inverse?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "boxes=get_boxes('data/train.txt')\n",
     "clusters,nearst_cluster,distances=get_anchor_boxes('data/train.txt',9)"
    ]
@@ -528,7 +539,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3.0
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
