--- a/daily/8/pytorch_tutoral/WhyPytorch.ipynb
+++ b/daily/8/pytorch_tutoral/WhyPytorch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -13,65 +13,28 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([3, 1])\n"
-     ]
-    }
-   ],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "X=torch.zeros((3,2))\n",
-    "print(X[:,0:1].size())"
+    "- 1.Basic Function to Create Tensor\n",
+    " - rand,zeros,rand_like\n",
+    "- 2.property of Tensor\n",
+    " - size() dtype\n",
+    "- 3.convert between numpy and torch\n",
+    " - tensor.numpy()\n",
+    " - torch.from_numpy()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([[0.6894, 0.9883],\n",
-      "        [0.3425, 0.0918],\n",
-      "        [0.1344, 0.4281]])\n"
-     ]
-    }
-   ],
    "source": [
-    "X=torch.rand(3,2)\n",
-    "print(X)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.float32\n"
-     ]
-    }
-   ],
-   "source": [
-    "X=torch.tensor([1,2.3])\n",
-    "print(X.dtype)"
+    "1.Basic Function to Create Tensor\n",
+    "------------------------\n",
+    "- A.rand,zeros\n",
+    "- B.rand_like,new_ones"
    ]
   },
   {
@@ -82,47 +45,49 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "tensor([[1., 1.],\n",
-       "        [1., 1.],\n",
-       "        [1., 1.]])"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0.0364, 0.4059],\n",
+      "        [0.5362, 0.2326],\n",
+      "        [0.2987, 0.1356]])\n",
+      "tensor([1., 2., 3.])\n",
+      "tensor([0.0753, 0.6292, 0.7714])\n",
+      "tensor([[1., 1.],\n",
+      "        [1., 1.]])\n",
+      "tensor([[0., 0., 0.],\n",
+      "        [0., 0., 0.]])\n",
+      "------------------\n"
+     ]
     }
    ],
    "source": [
-    "X.new_ones(3,2)"
+    "X1=torch.rand(3,2)\n",
+    "print(X1)\n",
+    "X2=torch.tensor([1.0,2,3])\n",
+    "print(X2)\n",
+    "X3=torch.rand_like(X2)\n",
+    "print(X3)\n",
+    "X4=X3.new_ones(2,2)\n",
+    "print(X4)\n",
+    "X5=torch.zeros(2,3)\n",
+    "print(X5)\n",
+    "print('------------------')"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 16,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([0.6513, 0.8755])"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "torch.rand_like(X)"
+    "2.property of Tensor\n",
+    "--------------------------------------"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -131,35 +96,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([2])\n"
+      "torch.Size([3]) torch.uint8\n"
      ]
     }
    ],
    "source": [
-    "shape=X.size()\n",
-    "print(shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "shape[0]"
+    "X1=torch.Tensor([1,2,3])\n",
+    "X1=X1.type(torch.uint8)\n",
+    "print(X1.size(),X1.dtype)"
    ]
   },
   {
