--- a/daily/8/pytorch_tutoral/saveModel.ipynb
+++ b/daily/8/pytorch_tutoral/saveModel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -98,13 +98,65 @@
      "output_type": "stream",
      "text": [
       "state : {}\n",
-      "param_groups : [{'nesterov': False, 'dampening': 0, 'lr': 0.001, 'params': [140333420703464, 140333420703104, 140333420702672, 140333420701016, 140333420701232, 140333420700728, 140333420700512, 140333420703608, 140333420748016, 140333420746792], 'weight_decay': 0.9, 'momentum': 0.9}]\n"
+      "param_groups : [{'dampening': 0, 'lr': 0.001, 'params': [139810914020880, 139810914020952, 139811659268816, 139810914055008, 139810914054360, 139810914054576, 139810914054648, 139810914054432, 139810914054792, 139810914054936], 'momentum': 0.9, 'weight_decay': 0.9, 'nesterov': False}]\n"
      ]
     }
    ],
    "source": [
     "for vname,vvars in solver.state_dict().items():\n",
     "        print(vname,':',vvars)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([6, 3, 5, 5])\n",
+      "torch.Size([6])\n",
+      "torch.Size([16, 6, 5, 5])\n",
+      "torch.Size([16])\n",
+      "torch.Size([120, 400])\n",
+      "torch.Size([120])\n",
+      "torch.Size([84, 120])\n",
+      "torch.Size([84])\n",
+      "torch.Size([10, 84])\n",
+      "torch.Size([10])\n"
+     ]
+    }
+   ],
+   "source": [
+    "params=solver.param_groups[0]['params']\n",
+    "for p in params:\n",
+    "    print(p.size())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([16, 6, 5, 5])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "solver.param_groups[0]['params'][2].shape"
    ]
   },
   {
