--- a/daily/8/PageRank.ipynb
+++ b/daily/8/PageRank.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -31,17 +31,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 2.74406752  3.57594683  3.01381688  2.72441591  2.118274  ]\n",
-      " [ 3.22947057  2.18793606  4.458865    4.8183138   1.91720759]\n",
-      " [ 3.95862519  2.6444746   2.84022281  4.62798319  0.35518029]\n",
-      " [ 0.4356465   0.10109199  4.16309923  3.89078375  4.35006074]\n",
-      " [ 4.89309171  3.99579282  2.30739681  3.90264588  0.59137213]]\n",
+      "[[2.74406752 3.57594683 3.01381688 2.72441591 2.118274  ]\n",
+      " [3.22947057 2.18793606 4.458865   4.8183138  1.91720759]\n",
+      " [3.95862519 2.6444746  2.84022281 4.62798319 0.35518029]\n",
+      " [0.4356465  0.10109199 4.16309923 3.89078375 4.35006074]\n",
+      " [4.89309171 3.99579282 2.30739681 3.90264588 0.59137213]]\n",
       "------------------\n",
-      "[[ 2.74406752  3.57594683  3.01381688  2.72441591  2.118274  ]\n",
-      " [ 3.22947057  2.18793606  4.458865    4.8183138   1.91720759]\n",
-      " [ 3.95862519  2.6444746   2.84022281  4.62798319  0.35518029]\n",
-      " [ 0.4356465   0.10109199  4.16309923  3.89078375  4.35006074]\n",
-      " [ 4.89309171  3.99579282  2.30739681  3.90264588  0.59137213]]\n"
+      "[[2.74406752 3.57594683 3.01381688 2.72441591 2.118274  ]\n",
+      " [3.22947057 2.18793606 4.458865   4.8183138  1.91720759]\n",
+      " [3.95862519 2.6444746  2.84022281 4.62798319 0.35518029]\n",
+      " [0.4356465  0.10109199 4.16309923 3.89078375 4.35006074]\n",
+      " [4.89309171 3.99579282 2.30739681 3.90264588 0.59137213]]\n"
      ]
     }
    ],
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -110,11 +110,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([2, 3, 1, 0]), array([0.375 , 0.3125, 0.1875, 0.125 ]))"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "W=np.array([\n",
     "        [0,0,1/3,0],\n",
@@ -139,11 +150,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "No module named 'nltk'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-5-ed873a9254d0>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mnltk\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0msent_tokenize\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mword_tokenize\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;31m#unfortunally this fail to tokenize chinere,using jieba instead\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mjieba\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mImportError\u001b[0m: No module named 'nltk'"
+     ]
+    }
+   ],
    "source": [
     "from nltk import sent_tokenize,word_tokenize\n",
     "#unfortunally this fail to tokenize chinere,using jieba instead\n",
@@ -152,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -163,18 +186,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'jieba' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-7-3bd6e6771b2b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mlist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mjieba\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcut\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmsg\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mcut_all\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'jieba' is not defined"
+     ]
+    }
+   ],
    "source": [
     "list(jieba.cut(msg,cut_all=False))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -185,20 +220,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'msg' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-31-e1827508ef5a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mwords\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[1;32mfor\u001b[0m \u001b[0mchar\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mpos\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mpseg\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcut\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmsg\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;31m#     if pos.startswith('n') or pos.startswith('a'):\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'word %s,pos:%s'\u001b[0m\u001b[1;33m%\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mchar\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mpos\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;31m#         words.append(char)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'msg' is not defined"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Building prefix dict from the default dictionary ...\n",
+      "DEBUG:jieba:Building prefix dict from the default dictionary ...\n",
+      "Dumping model to file cache /tmp/jieba.cache\n",
+      "DEBUG:jieba:Dumping model to file cache /tmp/jieba.cache\n",
+      "Loading model cost 1.509 seconds.\n",
+      "DEBUG:jieba:Loading model cost 1.509 seconds.\n",
+      "Prefix dict has been built succesfully.\n",
+      "DEBUG:jieba:Prefix dict has been built succesfully.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "word 黄晓明,pos:nr\n",
+      "word 工作室,pos:n\n",
+      "word 对此,pos:d\n",
+      "word 发声明,pos:l\n",
+      "word 否认,pos:v\n",
+      "word ，,pos:x\n",
+      "word 称,pos:v\n",
+      "word 黄晓明,pos:nr\n",
+      "word 不,pos:d\n",
+      "word 认识,pos:v\n",
+      "word 高某,pos:nr\n",
+      "word ，,pos:x\n",
+      "word 未,pos:d\n",
+      "word 参与,pos:v\n",
+      "word 过,pos:ug\n",
+      "word 任何,pos:r\n",
+      "word 操纵,pos:v\n",
+      "word 股票,pos:n\n",
+      "word 的,pos:uj\n",
+      "word 行为,pos:v\n",
+      "word ；,pos:x\n",
+      "word 黄晓明,pos:nr\n",
+      "word 未曾,pos:d\n",
+      "word 受过,pos:v\n",
+      "word 任何,pos:r\n",
+      "word 与,pos:p\n",
+      "word 股票,pos:n\n",
+      "word 有关,pos:vn\n",
+      "word 的,pos:uj\n",
+      "word 处罚,pos:v\n",
+      "word ，,pos:x\n",
+      "word 亦,pos:d\n",
+      "word 未,pos:d\n",
+      "word 介入,pos:v\n",
+      "word 过,pos:ug\n",
+      "word 任何,pos:r\n",
+      "word 与,pos:p\n",
+      "word 股票,pos:n\n",
+      "word 有关,pos:vn\n",
+      "word 的,pos:uj\n",
+      "word 调查,pos:vn\n",
+      "word 。,pos:x\n",
+      "word 黄晓明,pos:nr\n",
+      "word 工作室,pos:n\n",
+      "word 还,pos:d\n",
+      "word 敦促,pos:v\n",
+      "word 相关,pos:v\n",
+      "word 方,pos:n\n",
+      "word 即刻,pos:d\n",
+      "word 删撤,pos:v\n",
+      "word 一切,pos:r\n",
+      "word 虚假,pos:a\n",
+      "word 信息,pos:n\n",
+      "word ，,pos:x\n",
+      "word 以免,pos:c\n",
+      "word 对,pos:p\n",
+      "word 公众,pos:n\n",
+      "word 造成,pos:v\n",
+      "word 误导,pos:n\n",
+      "word 并,pos:c\n",
+      "word 导致,pos:v\n",
+      "word 己方,pos:n\n",
+      "word 法律责任,pos:n\n",
+      "word 的,pos:uj\n",
+      "word 承担,pos:v\n",
+      "word 。,pos:x\n",
+      "word 返回,pos:v\n",
+      "word 搜狐,pos:nz\n"
      ]
     }
    ],
@@ -220,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -276,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -297,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -306,7 +418,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['车船税', '工业', '商用车', '新能源-汽车-产品', '新能源-汽车-标准', '新能源-船舶-标准', '目录', '信息化']\n"
+      "['商用车', '信息化', '车船税', '目录', '工业', '新能源-汽车-产品', '新能源-汽车-标准', '新能源-船舶-标准']\n"
      ]
     }
    ],
@@ -421,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -517,18 +629,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "graph=Graph('PR/tx1.txt')"
+    "graph=Graph('PR/tx2.txt')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -537,7 +649,52 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'嫌疑人', '伪造', '涉嫌', '提请', '人民检察院', '刑事诉讼法', '案件材料', '逮捕', '认为', '被害', '乐清市', '滴滴', '钟元', '作出', '女孩', '依法', '规定', '车牌号', '温州市', '公安机关', '受理', '批捕', '交由', '中华人民共和国', '执行', '嫌犯', '批准逮捕', '顺风', '决定', '车案', '公安局', '审查', '条件', '符合', '遇害案', '行为', '乘坐', '浙江省', '犯罪'}\n"
+      "根据国务院有关部署，现就调整房地产交易环节契税、营业税优惠政策通知如下：\r\n",
+      "\r\n",
+      "　　一、关于契税政策\r\n",
+      "\r\n",
+      "　　（一）对个人购买家庭唯一住房（家庭成员范围包括购房人、配偶以及未成年子女，下同），面积为90平方米及以下的，减按1%的税率征收契税；面积为90平方米以上的，减按1.5%的税率征收契税。\r\n",
+      "\r\n",
+      "　　（二）对个人购买家庭第二套改善性住房，面积为90平方米及以下的，减按1%的税率征收契税；面积为90平方米以上的，减按2%的税率征收契税。\r\n",
+      "\r\n",
+      "　　家庭第二套改善性住房是指已拥有一套住房的家庭，购买的家庭第二套住房。\r\n",
+      "\r\n",
+      "　　（三）纳税人申请享受税收优惠的，根据纳税人的申请或授权，由购房所在地的房地产主管部门出具纳税人家庭住房情况书面查询结果，并将查询结果和相关住房信息及时传递给税务机关。暂不具备查询条件而不能提供家庭住房查询结果的，纳税人应向税务机关提交家庭住房实有套数书面诚信保证，诚信保证不实的，属于虚假纳税申报，按照《中华人民共和国税收征收管理法》的有关规定处理，并将不诚信记录纳入个人征信系统。\r\n",
+      "\r\n",
+      "　　按照便民、高效原则，房地产主管部门应按规定及时出具纳税人家庭住房情况书面查询结果，税务机关应对纳税人提出的税收优惠申请限时办结。\r\n",
+      "\r\n",
+      "　　（四）具体操作办法由各省、自治区、直辖市财政、税务、房地产主管部门共同制定。\r\n",
+      "\r\n",
+      "　　二、关于营业税政策\r\n",
+      "\r\n",
+      "　　个人将购买不足2年的住房对外销售的，全额征收营业税；个人将购买2年以上（含2年）的住房对外销售的，免征营业税。\r\n",
+      "\r\n",
+      "　　办理免税的具体程序、购买房屋的时间、开具发票、非购买形式取得住房行为及其他相关税收管理规定，按照《国务院办公厅转发建设部等部门关于做好稳定住房价格工作意见的通知》（国办发〔2005〕26号）、《国家税务总局 财政部 建设部关于加强房地产税收管理的通知》（国税发〔2005〕89号）和《国家税务总局关于房地产税收政策执行中几个具体问题的通知》（国税发〔2005〕172号）的有关规定执行。\r\n",
+      "\r\n",
+      "　　三、关于实施范围\r\n",
+      "\r\n",
+      "　　北京市、上海市、广州市、深圳市暂不实施本通知第一条第二项契税优惠政策及第二条营业税优惠政策，上述城市个人住房转让营业税政策仍按照《财政部 国家税务总局关于调整个人住房转让营业税政策的通知》（财税〔2015〕39号）执行。\r\n",
+      "\r\n",
+      "　　上述城市以外的其他地区适用本通知全部规定。"
+     ]
+    }
+   ],
+   "source": [
+    "!cat 'PR/tx2.txt'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'减按', '政策', '拥有', '提出', '实施', '中华人民共和国', '应对', '办法', '上海市', '购买', '住房价格', '家庭成员', '执行', '套数', '属于', '提交', '情况', '部门', '发票', '纳入', '深圳市', '纳税', '子女', '个人', '城市', '北京市', '限时', '形式', '家庭', '调整', '建设部', '通知', '程序', '房屋', '保证', '处理', '广州市', '面积', '授权', '诚信', '自治区', '优惠', '征收', '税收', '相关', '具体', '行为', '原则', '具备', '提供', '财政', '财税', '高效', '包括', '国家税务总局', '不能', '书面', '征信', '直辖市', '不实', '契税', '规定', '查询', '纳税人', '税收管理', '办理', '管理法', '稳定', '全部', '范围', '住房', '记录', '交易', '意见', '配偶', '地区', '部署', '制定', '销售', '税务机关', '环节', '转发', '传递', '做好', '申报', '税率', '便民', '改善', '购房人', '税务', '结果', '国务院办公厅', '工作', '有关', '个人住房', '出具', '所在地', '系统', '不足', '购房', '加强', '国务院', '虚假', '取得', '税收政策', '实有', '问题', '适用', '免税', '时间', '主管部门', '下同', '优惠政策', '享受', '财政部', '信息', '申请', '开具', '免征', '全额', '营业税', '办结', '转让', '条件'}\n"
      ]
     }
    ],
@@ -548,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -557,10 +714,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.05575416  0.04434738  0.0434743   0.0422307   0.0422307   0.04184893\n",
-      "  0.04099617  0.03634001  0.03540331  0.03130754]\n",
-      "['钟元', '依法', '顺风', '犯罪', '嫌疑人', '批准逮捕', '滴滴', '涉嫌', '乐清市', '女孩']\n",
-      "['女孩-滴滴-顺风', '涉嫌', '依法-批准逮捕-犯罪-嫌疑人-钟元', '乐清市']\n"
+      "[0.03144024 0.02204758 0.02075831 0.01836667 0.01787745 0.01716029\n",
+      " 0.0164818  0.01538152 0.01494893 0.01478611]\n",
+      "['住房', '家庭', '通知', '购买', '规定', '营业税', '纳税人', '税务机关', '个人', '契税']\n",
+      "['税务机关', '营业税', '通知', '个人-购买-家庭-住房', '规定', '纳税人-家庭-住房', '契税']\n"
      ]
     }
    ],
