--- a/daily/8/pytorch_tutoral/TorchText.ipynb
+++ b/daily/8/pytorch_tutoral/TorchText.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -175,12 +175,7 @@
       "torch.Size([218, 56]) torch.Size([218, 57])\n",
       "torch.Size([218, 57]) torch.Size([218, 57])\n",
       "torch.Size([218, 57]) torch.Size([218, 53])\n",
-      "torch.Size([205, 45]) torch.Size([205, 41])\n",
-      "<s> But then I remembered Tom talking to the open air and I tried it. </s> <unk> <unk> <unk> <unk> <unk> <unk> <unk> <unk> <unk> <unk> <unk> <unk> <unk> <unk> <unk> <unk> <unk> <unk> <unk> <unk> <unk> <unk> <unk> <unk> <unk> <unk> <unk> <unk> <unk>\n",
-      "[   1   53   80 1085   14   78 1055   24  331   10   22 3410  852  652\n",
-      "  114    5   14 4373 1099    2    0    0    0    0    0    0    0    0\n",
-      "    0    0    0    0    0    0    0    0    0    0    0    0    0]\n",
-      "<s> Aber dann erinnerte ich mich daran, wie Tom in den freien Himmel gesprochen hatte und ich versuchte es. </s> <unk> <unk> <unk> <unk> <unk> <unk> <unk> <unk> <unk> <unk> <unk> <unk> <unk> <unk> <unk> <unk> <unk> <unk> <unk> <unk> <unk>\n"
+      "torch.Size([205, 45]) torch.Size([205, 41])\n"
      ]
     }
    ],
@@ -212,22 +207,37 @@
     "        yield (d.src.transpose(0,1),d.trg.transpose(0,1))\n",
     "for x,y in rebatch(iters):\n",
     "    print(x.size(),y.size())\n",
-    "x,y=x[0].numpy(),y[0].numpy()\n",
-    "x=' '.join([SRC.vocab.itos[ii] for ii in x])\n",
-    "print(x)\n",
-    "print(y)\n",
-    "y=' '.join([TGT.vocab.itos[ii] for ii in y])\n",
-    "print(y)"
+    "# x,y=x[0].numpy(),y[0].numpy()\n",
+    "# x=' '.join([SRC.vocab.itos[ii] for ii in x])\n",
+    "# print(x)\n",
+    "# print(y)\n",
+    "# y=' '.join([TGT.vocab.itos[ii] for ii in y])\n",
+    "# print(y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def translation(x,parser,eos):\n",
+    "    '''\n",
+    "    x:(N)\n",
+    "    '''\n",
+    "    ret=[]\n",
+    "    x=x.cpu().numpy()\n",
+    "    N=x.shape[0]\n",
+    "    for line in x:\n",
+    "        wordlist=[parser.vocab.itos[w] for w in line]\n",
+    "        if eos in wordlist:\n",
+    "            wordlist=wordlist[:wordlist.index(eos)]\n",
+    "        l=' '.join(wordlist)\n",
+    "        ret.append(l)\n",
+    "    return ret"
+   ]
   }
  ],
  "metadata": {
