--- a/daily/8/DeepLearning/myproject/yolo3/model/yolo/YOLO_Details.ipynb
+++ b/daily/8/DeepLearning/myproject/yolo3/model/yolo/YOLO_Details.ipynb
@@ -14,7 +14,7 @@
     "$$L_{conf}^{(i)}=\\sum_{j}I[y_{j}^{(i)}=1]log\\hat{\\sigma(y_{j}^{(i)})} +\n",
     "\\sum_{j}I[y_{j}^{(i)}=0]f(i,j)log(1-\\hat{\\sigma(y_{j}^{(i)})})\\ $$\n",
     "$$f(i,j)=\\max{iou(predict\\_box_{j}^{(i)},gt\\_boxes)} <0.5$$\n",
-    "$$note: i\\ is\\ entry\\ of\\ features,eg:(13,13,3)$$\n"
+    "$$note: j\\ is\\ entry\\ of\\ features,eg:(13,13,3)$$\n"
    ]
   },
   {
@@ -35,7 +35,9 @@
     "$$b_{j,y}^{(i)}=\\frac{y_{j,y}^{(i)}-a_{j,y}}{H^{(i)}}$$\n",
     "$$b_{j,w}^{(i)}=log\\frac{y_{j,w}^{(i)}}{a_{j,w}}$$\n",
     "$$b_{j,h}^{(i)}=log\\frac{y_{j,h}^{(i)}}{a_{j,h}}$$\n",
-    "$$f(i,j)=2-\\frac{y_{j,w}y_{j,h}}{W^{(i)}H^{(i)}}$$\n"
+    "$$f(i,j)=2-\\frac{y_{j,w}y_{j,h}}{W^{(i)}H^{(i)}}$$\n",
+    "\n",
+    "$W,H$ is width and height of a anchor_grid\n"
    ]
   },
   {
