--- a/daily/8/opencv_tutoral/video.ipynb
+++ b/daily/8/opencv_tutoral/video.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -54,17 +54,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total: 373.0 Frames\n",
+      "total: 5378.0 Frames\n",
       "codec: 0x31637661\n",
-      "rate(fps): 30.226822726032616\n",
-      "width: 1920.0\n",
-      "height: 1080.0\n",
+      "rate(fps): 25.0\n",
+      "width: 480.0\n",
+      "height: 360.0\n",
       "format 0.0\n"
      ]
     }
    ],
    "source": [
-    "path='/home/zhangxk/AIProject/tensorflow-yolov3/VID_20181006_155810.mp4'\n",
+    "path='second.mp4'\n",
     "cap=cv2.VideoCapture(path)\n",
     "print('total:',cap.get(cv2.CAP_PROP_FRAME_COUNT),'Frames')\n",
     "print('codec:',hex(int(cap.get(cv2.CAP_PROP_FOURCC)))) #avc1\n",
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -98,22 +98,22 @@
     }
    ],
    "source": [
-    "path='/home/zhangxk/AIProject/tensorflow-yolov3/VID_20181006_155810.mp4'\n",
+    "path='second.mp4'\n",
     "save_path='my.avi'\n",
     "\n",
     "cap=cv2.VideoCapture(path)\n",
     "codec=int(cap.get(cv2.CAP_PROP_FOURCC))\n",
     "format='XVID'\n",
     "codec=cv2.VideoWriter_fourcc(*format)\n",
-    "scale=(1080,1920)\n",
+    "scale=(480,360)\n",
     "print(hex(codec))\n",
     "\n",
     "vid_writer = cv2.VideoWriter(save_path,codec,30,scale)\n",
     "while True:\n",
     "    retval,frame=cap.read()\n",
     "    if not retval:break\n",
-    "    frame=cv2.rotate(frame,cv2.ROTATE_90_CLOCKWISE)\n",
-    "    frame=cv2.resize(frame,scale)\n",
+    "#     frame=cv2.rotate(frame,cv2.ROTATE_90_CLOCKWISE)\n",
+    "#     frame=cv2.resize(frame,scale)\n",
     "    vid_writer.write(frame)\n",
     "cap.release()\n",
     "vid_writer.release()"
