--- a/daily/8/opencv_tutoral/video.ipynb
+++ b/daily/8/opencv_tutoral/video.ipynb
@@ -2,10 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import cv2\n",
@@ -15,9 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def readVideo(filename):\n",
@@ -25,8 +21,8 @@
     "    print('total:',cap.get(cv2.CAP_PROP_FRAME_COUNT),'Frames')\n",
     "    print('codec:',hex(int(cap.get(cv2.CAP_PROP_FOURCC)))) #avc1\n",
     "    print('rate(fps):',cap.get(cv2.CAP_PROP_FPS))\n",
-    "    print('width:',cap.get(cv2.CAP_PROP_FRAME_WIDTH))\n",
-    "    print('height:',cap.get(cv2.CAP_PROP_FRAME_HEIGHT))\n",
+    "    print('width:',int(cap.get(cv2.CAP_PROP_FRAME_WIDTH)))\n",
+    "    print('height:',int(cap.get(cv2.CAP_PROP_FRAME_HEIGHT)))\n",
     "    print('format',cap.get(cv2.CAP_PROP_FORMAT))\n",
     "    return cap\n",
     "\n",
@@ -46,25 +42,23 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total: 5378.0 Frames\n",
+      "total: 373.0 Frames\n",
       "codec: 0x31637661\n",
-      "rate(fps): 25.0\n",
-      "width: 480.0\n",
-      "height: 360.0\n",
+      "rate(fps): 30.226822726032616\n",
+      "width: 1920.0\n",
+      "height: 1080.0\n",
       "format 0.0\n"
      ]
     }
    ],
    "source": [
-    "path='second.mp4'\n",
+    "path='VID_20181006_155810.mp4'\n",
     "cap=cv2.VideoCapture(path)\n",
     "print('total:',cap.get(cv2.CAP_PROP_FRAME_COUNT),'Frames')\n",
     "print('codec:',hex(int(cap.get(cv2.CAP_PROP_FOURCC)))) #avc1\n",
@@ -84,10 +78,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -98,22 +90,22 @@
     }
    ],
    "source": [
-    "path='second.mp4'\n",
+    "path='VID_20181006_155810.mp4'\n",
     "save_path='my.avi'\n",
     "\n",
     "cap=cv2.VideoCapture(path)\n",
     "codec=int(cap.get(cv2.CAP_PROP_FOURCC))\n",
     "format='XVID'\n",
     "codec=cv2.VideoWriter_fourcc(*format)\n",
-    "scale=(480,360)\n",
+    "scale=(1080,1920)\n",
     "print(hex(codec))\n",
     "\n",
     "vid_writer = cv2.VideoWriter(save_path,codec,30,scale)\n",
     "while True:\n",
     "    retval,frame=cap.read()\n",
     "    if not retval:break\n",
-    "#     frame=cv2.rotate(frame,cv2.ROTATE_90_CLOCKWISE)\n",
-    "#     frame=cv2.resize(frame,scale)\n",
+    "    frame=cv2.rotate(frame,cv2.ROTATE_90_CLOCKWISE)\n",
+    "    frame=cv2.resize(frame,scale)\n",
     "    vid_writer.write(frame)\n",
     "cap.release()\n",
     "vid_writer.release()"
@@ -122,9 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
